# roscon-2025

./: .gitignore  README.md  get_started.md
.devcontainer/: Dockerfile  devcontainer.json
.tools/: build-and-push.sh
assets/: capture_img.py  safety_check_model.pt
solutions/ned3pro_packaging_manager/: CMakeLists.txt
solutions/ned3pro_packaging_manager/config/: joint_limits.yaml
solutions/ned3pro_packaging_manager/launch/: packaging_intern.launch.py
solutions/ned3pro_packaging_manager/scripts/: packaging_node.py  packaging_node_intern.py
solutions/ned3pro_quality_check_manager/: CMakeLists.txt  package.xml
solutions/ned3pro_quality_check_manager/launch/: quality_check_intern.launch.py  quality_check_minimum_valid.launch.py  quality_check_naive.launch.py
solutions/ned3pro_quality_check_manager/scripts/: quality_check_node.py  quality_check_node_full.py  quality_check_node_intern.py
solutions/rpi_manager/: CMakeLists.txt  package.xml
solutions/rpi_manager/launch/: intern_solution.launch.py  minimum_valid.launch.py  naive_solution.launch.py
solutions/rpi_manager/scripts/: detection.py  detection_intern.py  hmi_standard.py
solutions/rpi_manager/srv/: GetSafety.srv
src/: get_started.md  hg_biermann_report.md  pl_chardonnay_report.md
src/ned3pro_packaging_manager/: CMakeLists.txt  package.xml
src/ned3pro_packaging_manager/config/: moveit_controllers.yaml  moveit_py_config.yaml
src/ned3pro_packaging_manager/launch/: ned3pro_moveit_launch.py  packaging_moveit2_launch.py
src/ned3pro_packaging_manager/scripts/: packaging_node_full.py  packaging_node_moveit2.py  packaging_node_naive.py  pilz_sequence_example.py  publish_robot_description.py
src/ned3pro_quality_check_manager/: CMakeLists.txt  package.xml
src/ned3pro_quality_check_manager/config/: moveit_controllers.yaml  poses.yaml
src/ned3pro_quality_check_manager/launch/: ned3pro_moveit_launch.py
src/ned3pro_quality_check_manager/scripts/: quality_check_node.py  quality_check_node_full.py  quality_check_node_naive.py
src/rpi_manager/: CMakeLists.txt
src/rpi_manager/scripts/: detection.py  detection_naive.py  hmi_standard.py
src/solutions/ned3pro_packaging_manager/: CMakeLists.txt
src/solutions/ned3pro_quality_check_manager/: CMakeLists.txt
src/workshop/workshop_packaging_manager/: package.xml  pl_chardonnay_report.md
workshop/workshop_packaging_manager/: CMakeLists.txt  pl_chardonnay_report.md
workshop/workshop_quality_check_manager/: hg_biermann_report.md  package.xml
workshop/workshop_rpi_manager/: CMakeLists.txt  package.xml
workshop/workshop_rpi_manager/scripts/: detection.py
(+22 files in other folders)
