<?xml version="1.0"?>
<package format="3">
  <name>workshop_rpi_manager</name>
  <version>0.0.1</version>
  <description>ROS 2 package for Raspberry Pi manager nodes.</description>
  <maintainer email="user@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


